# kopare

./: .gitignore  LICENSE  README.md  README_sinus_detection.md  pyproject.toml  sandbox.py
kopare/: iterative_shrink_wrap.py  kopare.py  kopare_masking.py  kopare_parameters.json  kopare_utils.py  sinus_detection.py  test_wrap.py
